# psol

./: .gitignore  CMakeLists.txt  README.md  vcpkg.json
psol/: psol.hpp
psol/include/psol/: psol.hpp
psol/internal/: algo.hpp  common.hpp  poly.hpp
test/: case1.cpp
